HSEARCH-3006 Allow to override version of the Surefire and Failsafe Maven plugins to test on JDK10